--- a/src/styles/components/_information.scss
+++ b/src/styles/components/_information.scss
@@ -7,10 +7,13 @@
 .btn-main {
   display: flex;
   align-items: center;
-  padding: 1.5rem 7rem;
+  justify-content: center;
+  padding: 2rem 0;
+  width: 100%;
   border-radius: 1rem;
   background-color: $color-primary;
   color: $color-white;
+  font-size: 1.5rem;
   // width: 100%;
   @include respond(tablet) {
     padding: 1.5rem 0;
@@ -22,7 +25,7 @@
 .btn-main img {
   margin-right: 2rem;
   height: 1.6rem;
-  text-align: center;
+  // text-align: center;
 }
 
 .add-to-cart {
@@ -63,10 +66,14 @@
 }
 
 .controls {
-  display: flex;
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  gap: 0 2rem;
+  width: 100%;
 
   @include respond(tablet) {
     align-self: stretch;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -75,13 +82,12 @@
   &__items {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    width: 12rem;
+    width: 16rem;
     background-color: $color-grey-blue-light;
     align-items: center;
     justify-items: center;
     border-radius: 1rem;
     overflow: hidden;
-    margin-right: 2rem;
 
     @include respond(tablet) {
       width: 100%;
