--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -7,6 +7,7 @@
 
   @include respond(tablet) {
     grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    grid-template-rows: min-content min-content;
     padding: 0;
     margin-top: 0;
     gap: 0 12rem;
@@ -19,9 +20,8 @@
     gap: 3rem;
 
     @include respond(tablet) {
-      display: flex;
+      display: inline-block;
       gap: 0;
-      // height: 70%;
       overflow: hidden;
     }
   }
