--- a/src/styles/components/_information.scss
+++ b/src/styles/components/_information.scss
@@ -14,6 +14,7 @@
   background-color: $color-primary;
   color: $color-white;
   font-size: 1.5rem;
+  box-shadow: 0 3rem 3rem -1rem rgba($color: $color-primary, $alpha: 0.4);
   @include respond(tablet) {
     padding: 1.5rem 0;
     width: 100%;
