--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -333,7 +333,8 @@ body {
   border-radius: 1rem;
   background-color: #ff7d1a;
   color: white;
-  font-size: 1.5rem; }
+  font-size: 1.5rem;
+  box-shadow: 0 3rem 3rem -1rem rgba(255, 125, 26, 0.5); }
   @media only screen and (max-width: 44.6875em) {
     .btn-main {
       padding: 1.5rem 0;
